Add get_absolute_url to post model and update template to render a hyperlink to the detailed view.

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -3,6 +3,7 @@
     {% for post in latest_posts %}
         <li>
             <b>{{post.subject}}</b> <em>published: {{post.pub_date}}</em><br />
+            <small><a href="{{post.get_absolute_url}}">permalink</a><br />
             {{post.body}}
         </li>
     {% endfor %}
