Add sample CSS file and make use of it in index.html. Update urls.py so that django will serve static files in debug mode, this will be done by apache in production.

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -1,3 +1,19 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>nrl's blog TODO: don't hardcode this</title>
+    <link rel="stylesheet" type="text/css" href="/site_media/main.css" />
+</head>
+
+<body>
+<div id="main">
+<div id="menu">
+<ul>
+<li>Foo</li>
+<li>Bar</li>
+</ul>
+</div>
 {% if latest_posts %}
     <ul>
     {% for post in latest_posts %}
@@ -11,3 +27,6 @@
 {% else %}
     <p>No posts</p>
 {% endif %}
+</div>
+</body>
+</html>
