Start using markdown for post body. Add an additional database column for body_html so that conversion to html is only performed once.

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -21,7 +21,7 @@
             <p>
             <small>published: {{post.pub_date}} <a href="{{post.get_absolute_url}}">permalink</a></small>
             </p>
-            <p>{{post.body}}</p>
+            {{post.body_html|safe}}
         {% endfor %}
     {% else %}
         <p>No posts</p>
