Get code highlighting working. Still needs some work on the CSS.

--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{site_name}}</title>
     <link rel="stylesheet" type="text/css" href="/site_media/main.css" />
+    <link rel="stylesheet" type="text/css" href="/site_media/pygments.css" />
 </head>
 
 <body>
