--- a/site_media/main.css
+++ b/site_media/main.css
@@ -1,30 +1,57 @@
 body {
-    margin:20px 20px 0px 20px;
+    font-family: Verdana, Arial, Helvetica, sans-serif;
 }
-
 #main {
-    border:1px solid #000; 
-    background:#fff;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    background: #ffffff;
 }
 
 #main #menu {
-    border-left:1px solid #000; 
-    border-bottom:1px solid #000;
-    float:right;
-    width:230px;
-    background:#eee;
-    margin:0px 0px 10px 10px;
-}
-
-p,h1,pre {
-    margin:0px 10px 10px 10px;
+    float: right;
+    width: 30%;
+    background: #ffffff;
+    margin-top: 3em;
 }
 
 h1 {
-    font-size:14px;
-    padding-top:10px;
+    font-size: 2em;
 }
 
-#menu p {
-    font-size:10px
+h2 {
+    font-size: 1.5em;
+}
+
+small {
+    font-size: 0.7em;
+    color: #666666;
+}
+
+p {
+    font-size: 0.8em;
+}
+
+.sourcetable {
+    border:0px solid #999999;
+    font-size:90%;
+    margin:1em 2em;
+    padding: 0px;
+    width:60%;
+}
+
+
+.linenos {
+    background:#cccccc none repeat scroll 0 0;
+}
+
+.code {
+    background:#eeeeee none repeat scroll 0 0;
+    font-size:90%;
+    padding:5px;
+}
+
+pre {
+    margin: 0px;
+    padding: 0px;
 }
