--- a/templates/posts/index.html
+++ b/templates/posts/index.html
@@ -8,33 +8,46 @@
 </head>
 
 <body>
-<div id="main">
-    <div id="menu">
-        <ul>
-        <li>Foo</li>
-        <li>Bar</li>
-        </ul>
-    </div>
-    <h1>{{site_name}}</h1>
-    {% if latest_posts %}
-        {% for post in latest_posts %}
-            <div class="post">
-                <h2>{{post.title}}</h2>
-                <div class="info">
-                    <span class="date">Published: {{post.pub_date}}</span>
-                    <span class="details"><a href="{{post.get_absolute_url}}">Comments</a></span>
-                </div>
-                <div class="content">
-                {{post.body_html|safe}}
-                </div>
-                <div class="meta">
-                Filed under Foo. Tagged: programming, foo, bar.
-                </div>
+<div id="outer">
+    <div id="header"><h1>{{site_name}}</h1></div>
+    <div id="main">
+        <div id="content">
+            {% if latest_posts %}
+                {% for post in latest_posts %}
+                    <div class="post">
+                        <h2><a href="{{post.get_absolute_url}}">{{post.title}}</a></h2>
+                        <div class="info">
+                            <span class="date">Published: {{post.pub_date}}</span>
+                            <span class="details"><a href="{{post.get_absolute_url}}">Comments</a></span>
+                        </div>
+                        <div class="content">
+                        {{post.body_html|safe}}
+                        </div>
+                        <div class="meta">
+                        Filed under Foo. Tagged: programming, foo, bar.
+                        </div>
+                    </div>
+                {% endfor %}
+            {% else %}
+                <p>No posts</p>
+            {% endif %}
+        </div>
+        <div id="sidebar">
+            <div class="widget">
+                <h3>Recent posts</h3>
+                <p>List of recent posts go here</p>
             </div>
-        {% endfor %}
-    {% else %}
-        <p>No posts</p>
-    {% endif %}
+            <div class="widget">
+                <h3>Links</h3>
+                <p>Links to other sites go here</p>
+            </div>
+            <div class="widget">
+                <h3>Recent tweets</h3>
+                <p>Twitter activity goes here</p>
+            </div>
+        </div>
+    </div>
+    <div id="footer">Copyright (C) 2009 Nicholas Lativy</div>
 </div>
 </body>
 </html>
