--- a/site_media/main.css
+++ b/site_media/main.css
@@ -77,7 +77,7 @@ a:hover {
     padding-top: 30px;
     text-align: left;
     font-size: 0.7em;
-    color: #666666;
+    color: #2e3436;
 }
 
 h1 {
@@ -165,7 +165,7 @@ pre {
 
 .post .info {
     font-size: 0.7em;
-    color: #787878;
+    color: #2e3436;
 }
 
 .post .info .date {
@@ -178,7 +178,7 @@ pre {
 
 .post .meta {
     font-size: 0.7em;
-    color: #787878;
+    color: #2e3436;
 }
 
 .post .content {
