Use better pygment markdown code fixing bug with < and > in post body. Remove media url from templates.

--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>{{site_name}}</title>
-    <link rel="stylesheet" type="text/css" href="/site_media/main.css" />
-    <link rel="stylesheet" type="text/css" href="/site_media/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="{{media_url}}/main.css" />
+    <link rel="stylesheet" type="text/css" href="{{media_url}}/pygments.css" />
 </head>
 
 <body>
