Improve display of pagination links.

--- a/site_media/main.css
+++ b/site_media/main.css
@@ -186,5 +186,16 @@ pre {
 }
 
 .pagination {
+    font-size: 0.7em;
+    color: #2e3436;
+    margin-top: 30px;
     margin-bottom: 15px;
+}
+
+.pagination .prev {
+    float: left;
+}
+
+.pagination .next {
+    float: right;
 }
