--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -63,10 +63,14 @@
     {% if posts.has_other_pages %}
     <div class="pagination">
     {% if posts.has_previous %}
-    <a href="{% url index_page posts.previous_page_number %}">newer entries</a>
+    <span class="prev">
+    <a href="{% url index_page posts.previous_page_number %}">&lt; newer entries</a>
+    </span>
     {% endif %}
     {% if posts.has_next %}
-    <a href="{% url index_page posts.next_page_number %}">older entries</a>
+    <span class="next">
+    <a href="{% url index_page posts.next_page_number %}">older entries &gt;</a>
+    </span>
     {% endif %}
     </div>
     {% endif %}
