--- a/templates/posts/tag_post_list.html
+++ b/templates/posts/tag_post_list.html
@@ -4,10 +4,14 @@
     {% if posts.has_other_pages %}
     <div class="pagination">
     {% if posts.has_previous %}
-    <a href="{% url tag_page tag posts.previous_page_number %}">newer entries</a>
+    <span class="prev">
+    <a href="{% url tag_page tag posts.previous_page_number %}">&lt; newer entries</a>
+    </span>
     {% endif %}
     {% if posts.has_next %}
-    <a href="{% url tag_page tag posts.next_page_number %}">older entries</a>
+    <span class="next">
+    <a href="{% url tag_page tag posts.next_page_number %}">older entries &gt;</a>
+    </span>
     {% endif %}
     </div>
     {% endif %}
