--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -9,7 +9,7 @@
 
 <body>
 <div id="outer">
-    <div id="header"><h1>{{site_name}}</h1></div>
+    <div id="header"><h1><a href="{{site_url}}">{{site_name}}</a></h1></div>
     <div id="main">
         <div id="content">
             {% block content %}{% endblock %}
