--- a/site_media/main.css
+++ b/site_media/main.css
@@ -126,11 +126,12 @@ p {
 
 
 .linenos {
-    background:#cccccc none repeat scroll 0 0;
+    background:#babdb6 none repeat scroll 0 0;
+    width: 1.5em;
 }
 
 .code {
-    background:#eeeeee none repeat scroll 0 0;
+    background:#d3d7cf none repeat scroll 0 0;
     font-size:90%;
     padding:5px;
 }
