Display correct recent posts.

--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -35,7 +35,7 @@
         <h3>Recent posts</h3>
         {% if posts.object_list %}
             <ul>
-            {% for post in posts.object_list %}
+            {% for post in recent_posts %}
                 <li><a href="{{post.get_absolute_url}}">{{post.title}}</a></li>
             {% endfor %}
             </ul>
