Update template for detailed post view. Add description of view to tag_post_list template.

--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -12,6 +12,8 @@
     <div id="header"><h1><a href="{{site_url}}">{{site_name}}</a></h1></div>
     <div id="main">
         <div id="content">
+            {% block content-heading %} {% endblock %}
+
             {% block content %}{% endblock %}
 
             {% block pagination %}{% endblock %}
