--- a/site_media/main.css
+++ b/site_media/main.css
@@ -106,13 +106,6 @@ h2 a:link, h2 a:hover, h2 a:active, h2 a:visited {
     text-decoration: none;
 }
 
-small {
-    margin-top: 0px;
-    padding-top: 0.2px;
-    font-size: 0.7em;
-    color: #666666;
-}
-
 p {
     font-size: 0.8em;
 }
@@ -181,4 +174,9 @@ pre {
 
 .pagination .next {
     float: right;
+}
+
+.content-heading {
+    color: #2e3436;
+    margin-bottom: 15px;
 }
