--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -1,3 +1,26 @@
-<h1>{{post.title}}</h1>
-<h3>Publication date: {{post.pub_date}}</h3>
-{{post.body_html|safe}}
+{% extends "posts/post_list.html" %}
+
+{% block content %}
+    <!-- We are duplicating the post template here, must fix -->
+    <div class="post">
+        <h2><a href="{{post.get_absolute_url}}">{{post.title}}</a></h2>
+        <div class="info">
+            <span class="date">Published: {{post.pub_date|date:"j F Y \a\t H:i T"}}</span>
+            <span class="details"><a href="{{post.get_absolute_url}}">Comments</a></span>
+        </div>
+        <div class="content">
+        {{post.body_html|safe}}
+        </div>
+        <div class="meta">
+        {% if post.get_tags %}
+        Tagged: 
+        {% for tag in post.get_tags %}
+            <!-- TODO: do not have tag URL hardcoded here -->
+            <a href="/tag/{{tag.name}}">{{tag.name}}</a>{% if not forloop.last %}, {%endif%}
+        {%endfor%}
+        {% else %}
+        Not tagged.
+        {% endif %}
+        </div>
+    </div>
+{% endblock %}
