--- a/site_media/main.css
+++ b/site_media/main.css
@@ -82,6 +82,8 @@ a:hover {
 }
 
 h1 {
+    margin-top: 0px;
+    padding-top: 0px;
     font-size: 1.5em;
     color: #2e3436;
 }
@@ -176,7 +178,21 @@ pre {
     float: right;
 }
 
+#header .title {
+    margin-top: 16px;
+    padding-top: 0px;
+    float: left;
+}
+
+#header .search-form {
+    margin-top: 20px;
+    padding-top: 0px;
+    font-size: 0.8em;
+    float: right;
+}
+
 .content-heading {
     color: #2e3436;
     margin-bottom: 15px;
 }
+
