--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -9,7 +9,16 @@
 
 <body>
 <div id="outer">
-    <div id="header"><h1><a href="{{site_url}}">{{site_name}}</a></h1></div>
+    <div id="header">
+        <div class="title">
+        <h1><a href="{{site_url}}">{{site_name}}</a></h1>
+        </div>
+        <div class="search-form">
+            <form action="{{site_url}}/search" method="get">
+                <input type="text" name="q" /> <input type="submit" value="search" />
+            </form>
+        </div>
+    </div>
     <div id="main">
         <div id="content">
             {% block content-heading %} {% endblock %}
