--- a/templates/posts/post_list.html
+++ b/templates/posts/post_list.html
@@ -6,7 +6,10 @@
             <div class="post">
                 <h2><a href="{{post.get_absolute_url}}">{{post.title}}</a></h2>
                 <div class="info">
-                    <span class="date">Published: {{post.pub_date|date:"j F Y \a\t H:i T"}}</span>
+                    <span class="date">
+                        Published on {{post.pub_date|date:"j F Y \a\t H:i T"}}
+                        by {{post.author.first_name}} {{post.author.last_name}}
+                    </span>
                     <span class="details"><a href="{{post.get_absolute_url}}">Comments</a></span>
                 </div>
                 <div class="content">
