--- a/templates/posts/detail.html
+++ b/templates/posts/detail.html
@@ -1,4 +1,4 @@
-{% extends "posts/post_list.html" %}
+{% extends "posts/base.html" %}
 
 {% block content %}
     {% if preview %}
@@ -6,33 +6,6 @@
         <p>This is a preview of an unpublished post.</p>
     </div>
     {% endif %}
-    <!-- We are duplicating the post template here, must fix -->
-    <div class="post">
-        <h2><a href="{{post.get_absolute_url}}">{{post.title}}</a></h2>
-        <div class="info">
-            <span class="date">
-                {% if post.pub_date %}
-                Published on {{post.pub_date|date:"j F Y \a\t H:i T"}}
-                by {{post.author.first_name}} {{post.author.last_name}}
-                {% else %}
-                Unpublished
-                {% endif %}
-            </span>
-            <span class="details"><a href="{{post.get_absolute_url}}">Comments</a></span>
-        </div>
-        <div class="content">
-        {{post.body_html|safe}}
-        </div>
-        <div class="meta">
-        {% if post.get_tags %}
-        Tagged: 
-        {% for tag in post.get_tags %}
-            <!-- TODO: do not have tag URL hardcoded here -->
-            <a href="/tag/{{tag.name}}">{{tag.name}}</a>{% if not forloop.last %}, {%endif%}
-        {%endfor%}
-        {% else %}
-        Not tagged.
-        {% endif %}
-        </div>
-    </div>
+
+    {% include "posts/post.html" %}
 {% endblock %}
