--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -5,6 +5,7 @@
     <title>{{site_name}}</title>
     <link rel="stylesheet" type="text/css" href="{{media_url}}/main.css" />
     <link rel="stylesheet" type="text/css" href="{{media_url}}/pygments.css" />
+    <link rel="alternate" type="application/rss+xml" title="Article Feed" href="{{site_url}}/feeds/articles" /> 
 </head>
 
 <body>
