--- a/templates/posts/comments.html
+++ b/templates/posts/comments.html
@@ -29,6 +29,6 @@
 <p>No comments.</p>
 {% endif %}
 
-<h3>Post a comment</h3>
+<h3 id="respond">Post a comment</h3>
 {% render_comment_form for posts.post post.id %}
 </div>
