--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -7,6 +7,7 @@
   {% load markdown_code %}
   <form action="{% comment_form_target %}" method="POST">
     <h2>Preview Comment</h2>
+
 <div class="comments">
     {% if form.errors %}
       <p>Please correct the error{{ form.errors|pluralize }} below...</p>
@@ -41,4 +42,5 @@
     </p>
   </form>
 </div>
+{% include "comments/comment_help.html" %}
 {% endblock %}
