Add pages as a type of post. Add help text to models. Add option to disable comments on a post. Remove file that was accidently commited. Add wordpress style URLs for compatability.

--- a/templates/posts/comments.html
+++ b/templates/posts/comments.html
@@ -6,6 +6,7 @@
 
 <div class="comments">
 <h3 id="comments">Comments</h3>
+{% if post.allow_comments %}
 {% if comment_list %}
     {% for comment in comment_list %}
     <div class="comment" id="c{{ comment.id }}">
@@ -35,4 +36,7 @@
 {% include "comments/comment_help.html" %}
 
 {% render_comment_form for posts.post post.id %}
+{% else %}
+<p> Comments are disabled for this post.</p>
+{% endif %}
 </div>
