Various updates and bug fixes made during test deployment.

--- a/site_media/main.css
+++ b/site_media/main.css
@@ -119,13 +119,15 @@ p {
     font-size:90%;
     margin:1em 2em;
     padding: 0px;
-    width:60%;
+    width:80%;
 }
 
 
 .linenos {
     background:#babdb6 none repeat scroll 0 0;
-    width: 2em;
+    text-align: right;
+    padding-right: 3px;
+    padding-left: 10px;
 }
 
 .code {
@@ -187,7 +189,7 @@ pre {
 }
 
 #header .search-form {
-    margin-top: 20px;
+    margin-top: 15px;
     padding-top: 0px;
     font-size: 0.8em;
     float: right;
@@ -278,4 +280,20 @@ pre {
 
 .tag-8 {
     font-size: 1.4em;
+}
+
+.postImage {
+    border 0px;
+    padding: 5px;
+    text-align: center;
+}
+
+a img {
+    border: none;
+}
+
+.parse-error {
+    color: #cc0000;
+    text-decoration: underline;
+    font-weight: bold;
 }
