--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -3,8 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>{{site_name}} {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{{media_url}}/main.css" />
-    <link rel="stylesheet" type="text/css" href="{{media_url}}/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/main.css" />
+    <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/pygments.css" />
     <link rel="alternate" type="application/rss+xml" title="All blog posts" href="{{site_url}}/feeds/articles" /> 
 </head>
 
@@ -22,7 +22,9 @@
             {% block pagination %}{% endblock %}
         </div>
         <div id="sidebar">
+            {% block widgets %}
             {% include "posts/widgets.html" %}
+            {% endblock %}
         </div>
     </div>
     <div id="footer">
