--- a/templates/404.html
+++ b/templates/404.html
@@ -1,13 +1,10 @@
 {% extends "posts/base.html" %}
 
-{% block title %}Page not found{% endblock %}
+{% block title %} - Page not found{% endblock %}
 
 {% block content %}
 <h2>Page not found</h2>
 <p>Sorry the page you were looking for cannot be found.
 You may wish to try searching.</p>
 
-{% endblock %}
-
-{% block widgets %}
 {% endblock %}
