Change non working 500.html template to a simple template.

--- a/templates/500.html
+++ b/templates/500.html
@@ -1,12 +1,12 @@
-{% extends "posts/base.html" %}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+      "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Error rendering page</title>
+</head>
 
-{% block title %}Page unavailable {% endblock %}
-
-{% block content %}
+<body>
 <h2>Page unavailable</h2>
 <p>We're sorry, but the requested page is currently unavailable.</p>
-
-{% endblock %}
-
-{% block widgets %}
-{% endblock %}
+</body>
+</html>
