Hack markdown method to wrap images in a div. Update CSS to centre images.

--- a/site_media/main.css
+++ b/site_media/main.css
@@ -282,9 +282,12 @@ pre {
     font-size: 1.4em;
 }
 
-.postImage {
+.postimg {
     border 0px;
     padding: 5px;
+}
+
+.image-wrapper {
     text-align: center;
 }
 
