Strip images from comments.

--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -15,7 +15,7 @@
       <p>This is what your comment will look like:</p>
       <div class="comment">
       <div class="body">
-      {{ comment|striptags|markdown_code|safe }}
+      {{ comment|striptags|markdown_comment|safe }}
       </div>
       </div>
       <p>
