Fix bug where preview button was actually submit.

--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -38,7 +38,7 @@
     {% endfor %}
     <p class="submit">
       <input type="submit" name="submit" class="submit-post" value="Post">
-      <input type="submit" name="submit" class="submit-preview" value="Preview">
+      <input type="submit" name="preview" class="submit-preview" value="Preview">
     </p>
   </form>
 </div>
