--- a/templates/comments/comment_help.html
+++ b/templates/comments/comment_help.html
@@ -4,9 +4,13 @@ Comments are rendered using
 with the addition that code blocks may be prefixed with <tt>pygments:lang</tt>
 where <tt>lang</tt> is the name of a language supported by
 the <a href="http://pygments.org/languages/">Pygments syntax highlighting library</a>
-in order to correctly highlight the code.
+in order to correctly highlight the code. Images are automatically stripped from
+comments.
 </p>
 <p>
 The pygments line must be indented by at least four spaces along with the code block
 that it precedes. The preview button is your friend.
+</p>
+<p>
+Your comment may not appear immediately.
 </p>
