Update page title in templates.

--- a/templates/comments/preview.html
+++ b/templates/comments/preview.html
@@ -1,6 +1,6 @@
 {% extends "posts/base.html" %}
 
-{% block title %} / Preview Comment{% endblock %}
+{% block title %} - Preview Comment{% endblock %}
 
 {% block content %}
   {% load comments %}
