--- a/templates/posts/base.html
+++ b/templates/posts/base.html
@@ -2,7 +2,7 @@
       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>{{site_name}} {% block title %}{% endblock %}</title>
+    <title>{% block title %}{{site_name}}{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/main.css" />
     <link rel="stylesheet" type="text/css" href="{{MEDIA_URL}}/pygments.css" />
     <link rel="alternate" type="application/rss+xml" title="All blog posts" href="{{site_url}}/feeds/articles" /> 
