--- a/templates/posts/search_results.html
+++ b/templates/posts/search_results.html
@@ -1,5 +1,7 @@
 {% extends "posts/post_list.html" %}
 
+{% block title %}{{site_name}} - search{% endblock %}
+
 {% block content-heading %}
 <div class="content-heading">
     {% if parse_error %}
